Opened 8 years ago
Closed 8 years ago
#13073 closed bug (fixed)
Glitch Success/Failure colors in Appearance
Reported by: | Janus | Owned by: | Janus |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Appearance | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (2)
Change History (4)
by , 8 years ago
Attachment: | After Revert.png added |
---|
by , 8 years ago
Attachment: | On selection.png added |
---|
comment:1 by , 8 years ago
Description: | modified (diff) |
---|
comment:2 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev50687.