Fixes Success/Failure colors in Appearance

* Fixes the mapping function index_to_color_which
* Fixes #13073